Fixed layout bug on mobe

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,7 +28,6 @@
   }
   .indexContainer {
     padding-top: 20px;
-    padding-bottom: 20px;
   }
 }
 
